--- a/package.json
+++ b/package.json
@@ -6,20 +6,11 @@
   "repository": "https://github.com/angular/angular-seed",
   "license": "MIT",
   "devDependencies": {
-    "bower": "^1.3.1",
-    "http-server": "^0.6.1",
-    "jasmine-core": "^2.3.4",
-    "karma": "~0.12",
-    "karma-chrome-launcher": "^0.1.12",
-    "karma-firefox-launcher": "^0.1.6",
-    "karma-jasmine": "^0.3.5",
-    "karma-junit-reporter": "^0.2.2",
-    "protractor": "^2.1.0",
-    "shelljs": "^0.2.6"
-  },
-  "scripts": {
-    "postinstall": "bower install",
-    "prestart": "npm install",
-    "start": "http-server -a localhost -p 8000 -c-1"
+    "connect-modrewrite": "~0.8.1",
+    "matchdep": "~0.3.0",
+    "grunt": "~0.4.5",
+    "grunt-contrib-connect": "~0.10.1",
+    "grunt-contrib-cssmin": "~0.13.0",
+    "grunt-contrib-uglify":"~0.9.2"
   }
 }
